backend-deployment-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: shashank20062000/mern-3tier-backend:9
          imagePullPolicy: Always
          ports:
            - containerPort: 8333
          resources:
            requests:
              cpu: "50m"
              memory: "125Mi"
            limits:
              cpu: "100m"
              memory: "250Mi"
