frontend-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend2
spec:
  selector:
    app: frontend2
  ports:
    - name: http
      port: 5050
      targetPort: 5050
